--- a/data/contact/contact_rules.yml
+++ b/data/contact/contact_rules.yml
@@ -5,8 +5,20 @@ rules:
   - rule: Activate add contact form
     steps:
       - intent: contact_add_request
+      - action: action_check_contact_existence
+      - action: action_listen
       - action: add_contact_form
       - active_loop: add_contact_form
+
+  # Handle network typo correction
+  - rule: Handle crypto network typo
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_crypto_network
+      - action: action_check_contact_existence
+      - action: action_listen
+      - action: action_correct_crypto_network_typo
 
   # Form submission after all slots are filled
   - rule: Submit add contact form
