--- a/data/contact/contact_stories.yml
+++ b/data/contact/contact_stories.yml
@@ -100,6 +100,7 @@ stories:
 
   - story: Add contact - name and network provided initially
     steps:
+      # Initial user request with correct network name
       - intent: contact_add_request
         entities:
           - contact_add_entity_name: "Emma Wilson"
@@ -107,6 +108,8 @@ stories:
       - slot_was_set:
           - contact_add_entity_name: "Emma Wilson"
           - contact_add_entity_crypto_network: "Litecoin"
+      
+      # Bot's response sequence - direct to form without typo correction
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
@@ -114,11 +117,15 @@ stories:
       - active_loop: add_contact_form
       - slot_was_set:
           - requested_slot: contact_add_entity_wallet_address
+      
+      # User provides wallet address
       - intent: inform
         entities:
           - contact_add_entity_wallet_address: "LVkPNYuhBbraFYEWA8oqQAYgGYMY57zZj5"
       - slot_was_set:
           - contact_add_entity_wallet_address: "LVkPNYuhBbraFYEWA8oqQAYgGYMY57zZj5"
+      
+      # Bot validates and confirms
       - action: action_validate_wallet_address
       - slot_was_set:
           - address_valid: true
@@ -878,9 +885,9 @@ stories:
       - action: action_save_contact
       - action: utter_contact_added_successfully
 
-  # REQUEST WITH TYPOS - SAMPLE FOR TRAINING
+  # COMMON PATTERNS WITH CHECKPOINTS
 
-  - story: Add contact - crypto network typo correction sample (Etherum)
+  - story: Start - Network typo detection (Etherum)
     steps:
       - intent: contact_add_request
         entities:
@@ -895,15 +902,65 @@ stories:
       - action: action_correct_crypto_network_typo
       - slot_was_set:
           - contact_add_entity_crypto_network: "Ethereum"
+    checkpoint: typo_corrected
+
+  - story: Start - Network typo detection (Bitcon)
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_name: "Alice Smith"
+          - contact_add_entity_crypto_network: "Bitcon" # Typo
+      - slot_was_set:
+          - contact_add_entity_name: "Alice Smith"
+          - contact_add_entity_crypto_network: "Bitcon"
+      - action: action_check_contact_existence
+      - slot_was_set:
+          - contact_exists: false
+      - action: action_correct_crypto_network_typo
+      - slot_was_set:
+          - contact_add_entity_crypto_network: "Bitcoin"
+    checkpoint: typo_corrected
+
+  - story: Start - Regular network (no typo)
+    steps:
+      - intent: contact_add_request
+        entities:
+          - contact_add_entity_name: "Emma Wilson"
+          - contact_add_entity_crypto_network: "Litecoin"
+      - slot_was_set:
+          - contact_add_entity_name: "Emma Wilson"
+          - contact_add_entity_crypto_network: "Litecoin"
+      - action: action_check_contact_existence
+      - slot_was_set:
+          - contact_exists: false
+      - action: add_contact_form
+    checkpoint: form_activated
+
+  - story: After typo corrected - Continue with form
+    checkpoint: typo_corrected
+    steps:
       - action: add_contact_form
       - active_loop: add_contact_form
       - slot_was_set:
           - requested_slot: contact_add_entity_wallet_address
+    checkpoint: ask_wallet_address
+
+  - story: After form activated - Continue with form options
+    checkpoint: form_activated
+    steps:
+      - active_loop: add_contact_form
+      - slot_was_set:
+          - requested_slot: contact_add_entity_wallet_address
+    checkpoint: ask_wallet_address
+
+  - story: Provide wallet address and complete
+    checkpoint: ask_wallet_address
+    steps:
       - intent: inform
         entities:
-          - contact_add_entity_wallet_address: "0x742d35Cc6634C0532925a3b844Bc454e4438f44e"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
       - slot_was_set:
-          - contact_add_entity_wallet_address: "0x742d35Cc6634C0532925a3b844Bc454e4438f44e"
+          - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
       - action: action_validate_wallet_address
       - slot_was_set:
           - address_valid: true
@@ -915,6 +972,7 @@ stories:
 
   - story: Add contact - crypto network typo correction sample (Bitcon)
     steps:
+      # Initial user request with typo
       - intent: contact_add_request
         entities:
           - contact_add_entity_name: "Alice Smith"
@@ -922,6 +980,8 @@ stories:
       - slot_was_set:
           - contact_add_entity_name: "Alice Smith"
           - contact_add_entity_crypto_network: "Bitcon"
+      
+      # Bot's response sequence
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
@@ -932,11 +992,15 @@ stories:
       - active_loop: add_contact_form
       - slot_was_set:
           - requested_slot: contact_add_entity_wallet_address
+      
+      # User provides wallet address
       - intent: inform
         entities:
           - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
       - slot_was_set:
           - contact_add_entity_wallet_address: "1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa"
+      
+      # Bot validates and confirms
       - action: action_validate_wallet_address
       - slot_was_set:
           - address_valid: true
