Fix: Restructured stories to remove duplicate checkpoints and fixed btc synonym issue

--- a/data/common/crypto_synonym_nlu.yml
+++ b/data/common/crypto_synonym_nlu.yml
@@ -211,7 +211,7 @@ nlu:
       - bitcoin
       - XBT
       - "Bitcoin network"
-      - btc
+      - "btc"
       - "satoshi's coin"
       - "digital gold"
 
