Fix: Updated all stories to consistently set crypto_network_typo slot to resolve conflicts

--- a/data/contact/contact_stories.yml
+++ b/data/contact/contact_stories.yml
@@ -17,6 +17,8 @@ stories:
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
       - action: action_validate_wallet_address
       - slot_was_set:
           - address_valid: true
@@ -73,6 +75,8 @@ stories:
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
       - action: add_contact_form
       - active_loop: add_contact_form
       - slot_was_set:
@@ -845,6 +849,8 @@ stories:
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
       - action: add_contact_form
       - active_loop: add_contact_form
       - slot_was_set:
@@ -881,6 +887,8 @@ stories:
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: false
       - action: action_validate_wallet_address
       - slot_was_set:
           - address_valid: true
@@ -1039,6 +1047,8 @@ stories:
       - action: action_check_contact_existence
       - slot_was_set:
           - contact_exists: false
+      - slot_was_set:
+          - crypto_network_typo: true
       - action: action_correct_crypto_network_typo
       - slot_was_set:
           - contact_add_entity_crypto_network: "Bitcoin"
